[gd_scene load_steps=11 format=3 uid="uid://doxlf84fpy8ko"]

[ext_resource type="Script" path="res://gds/temp_player.gd" id="1_ofada"]
[ext_resource type="Script" path="res://gds/Node3D.gd" id="2_qym0j"]
[ext_resource type="PackedScene" uid="uid://cug23qebfggko" path="res://assets/cone.tscn" id="3_a0f54"]
[ext_resource type="Script" path="res://scenes/Interaction.gd" id="4_mp536"]
[ext_resource type="PackedScene" uid="uid://bqyneech2sxd6" path="res://assets/fading_screen.tscn" id="5_l721s"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_b1fkt"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_smh1v"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_nyhxd"]
dof_blur_far_distance = 3.0
dof_blur_far_transition = 1.0
dof_blur_near_distance = 0.01
dof_blur_near_transition = -1.0
dof_blur_amount = 0.5

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_gd8kl"]
points = PackedVector3Array(-0.896022, -0.955907, -0.388314, 0.0286088, 0.919081, 0.0286088, 0.0572855, 0.690129, 0.143754, 0.743815, -0.952232, -0.624879, 0.18069, -0.964436, 0.964436, -0.743864, -0.952296, 0.624921, 0.896009, -0.955893, 0.388308, -0.180872, -0.9644, -0.9644, 0.964436, -0.964436, -0.18069, -0.964436, -0.964436, 0.18069, -0.0286088, 0.919081, -0.0286088, -0.388308, -0.955893, 0.896009, 0.388314, -0.955907, -0.896022, -0.659999, -0.960203, -0.720152, 0.659976, -0.960171, 0.720128, 0.0286088, 0.919081, -0.0286088, -0.0286088, 0.919081, 0.0286088, -0.180872, -0.9644, 0.9644, 0.18069, -0.964436, -0.964436, 0.964436, -0.964436, 0.18069, -0.964436, -0.964436, -0.18069, -0.388314, -0.955907, -0.896022, 0.388308, -0.955893, 0.896009, 0.896009, -0.955893, -0.388308, -0.896022, -0.955907, 0.388314, 0.515753, -0.859528, -0.773539, -0.515576, -0.859533, 0.773544, -0.773539, -0.859528, -0.515753, 0.773412, -0.859387, 0.515668, 0.515668, -0.859387, 0.773412, -0.515661, -0.859674, -0.773671, 0.659999, -0.960203, -0.720152)

[sub_resource type="LabelSettings" id="LabelSettings_rbqvb"]

[node name="TempPlayer" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_ofada")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_b1fkt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_smh1v")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.464368, 0)
script = ExtResource("2_qym0j")

[node name="Camera3D" type="Camera3D" parent="head"]
attributes = SubResource("CameraAttributesPractical_nyhxd")
current = true
fov = 90.0
far = 20.0

[node name="FOV" type="Area3D" parent="head/Camera3D"]
visible = false

[node name="Cone" parent="head/Camera3D/FOV" instance=ExtResource("3_a0f54")]
transform = Transform3D(5, 0, 0, 0, -2.18557e-07, -5, 0, 5, -2.18557e-07, 0, 0, -5)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="head/Camera3D/FOV"]
transform = Transform3D(5, 0, 0, 0, -2.18557e-07, -5, 0, 5, -2.18557e-07, 0, -0.203927, -4.14661)
shape = SubResource("ConvexPolygonShape3D_gd8kl")

[node name="Interaction" type="RayCast3D" parent="head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.10802, -0.670505)
script = ExtResource("4_mp536")

[node name="InteractUI" type="Control" parent="head/Camera3D/Interaction"]
visible = false
top_level = true
z_as_relative = false
layout_mode = 3
anchors_preset = 0
offset_right = 1980.0
offset_bottom = 1080.0
mouse_filter = 1

[node name="Label" type="Label" parent="head/Camera3D/Interaction/InteractUI"]
top_level = true
layout_mode = 0
offset_right = 1980.0
offset_bottom = 1080.0
theme_override_font_sizes/font_size = 50
text = "[E]"
label_settings = SubResource("LabelSettings_rbqvb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="VisionRayTest" type="RayCast3D" parent="."]
target_position = Vector3(0, -1, -50)
debug_shape_custom_color = Color(0.823529, 0, 0, 1)

[node name="FadingScreen" parent="." instance=ExtResource("5_l721s")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
